--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dean.one</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
+  
   <body>
     <div>
       <a href="./01-text/01.html">01</a>
@@ -30,13 +37,6 @@
       <a href="./11-produkte/11.html">11</a>
       <a href="./12-danke/12.html">12</a>
     </div>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap"
-      rel="stylesheet"
-    />
 
     <img
       src="./logo/dean.one-Logo-RGB.svg"
