--- a/01-text/01.html
+++ b/01-text/01.html
@@ -14,14 +14,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    
     <title>01.dean.one</title>
   </head>
 
   <body>
      <div>
-      <a href="../index.html">←<br /></a>
+      <a href="../index.html">←</a>
       <h1 href="../index.html">
-        <br /><span style="color:#0a0a0a"><u>Generative Brand<br />dean.one</u></span><br />
+        <span style="color:#0a0a0a"><u>Generative Brand<br />dean.one</u></span><br />
         <br />Die Markenbildung ist ein wesentlicher Bestandteil der Schaffung einer Identität, mit der sich die Kunden 
         identifizieren können. Doch es scheint einen neuen Akteur in diesem Bereich zu geben. Durch den Einsatz 
         generativer Designansätze eröffnet sich in vielen Bereichen eine komplett neue Welt.<br />
@@ -45,7 +49,7 @@
         der Blütenblätter einer Blume. Die Formen stehen oft für Gleichgewicht, Harmonie und Stabilität.<br />
         <br /><span style="color:#0a0a0a"><u>Kreis, Quadrat, Dreieck und das Parallelogramm</u></span><br />
         <p style="margin-bottom: 100pt"></p>
-      </a>
+      </h1>
 
     <img
       src="../logo/dean.one-Logo-RGB.svg"
