--- a/04-text/04.html
+++ b/04-text/04.html
@@ -14,6 +14,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    
     <title>04.dean.one</title>
   </head>
 
@@ -21,7 +26,7 @@
      <div>
       <a href="../index.html">←<br /></a>
       <h1 href="../index.html">
-        <br /><span style="color:#0a0a0a"><u>Die Grundformen<br />Kreis</u></span><br />
+        <span style="color:#0a0a0a"><u>Die Grundformen<br />Kreis</u></span><br />
         <br />Die Natur ist wie ein Kreis. Der Kreis bedeutet Leben. „In allem, was die Natur 
         geschaffen hat, findet man den Kreis wieder: Die Erde ist rund, Sonne, Mond und Sterne 
         auch". Die Jahreszeiten ziehen sich wie ein Kreis durch das Jahr und kehren immer wieder. 
@@ -63,8 +68,8 @@
         <br />Jetzt stellt sich die Frage: können geometrische Formen einen Charakter, eine Duftnote, Vitamine, 
         eine Eleganz, eine Innovation, und vieles andere haben? Wenn ja, wie kann das aussehen, riechen, schmecken, 
         kleiden oder einfach glücklich machen?<br />
-        <p style="margin-bottom: 100pt"></p>
-      </a>
+        <h1 style="margin-bottom: 100pt"></h1>
+      </h1>
 
     <img
       src="../logo/dean.one-Logo-RGB.svg"
