--- a/06-quadrat/06.html
+++ b/06-quadrat/06.html
@@ -19,7 +19,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>07.dean.one</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>06.dean.one</title>
   </head>
 
   <body>
