--- a/02-elemente/02.html
+++ b/02-elemente/02.html
@@ -18,6 +18,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    
     <title>02.dean.one</title>
   </head>
 
