--- a/10-typo/10.html
+++ b/10-typo/10.html
@@ -18,9 +18,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-
     <link rel="stylesheet" href="style.css" />
-    <title>17.dean.one</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    
+    <title>10.dean.one</title>
   </head>
 
   <body>
