--- a/11-produkte/11.html
+++ b/11-produkte/11.html
@@ -16,6 +16,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    
     <title>11.dean.one</title>
   </head>
 
