--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         right: 20px;
       }
     </style>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    
+
     <title>dean.one</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
