--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
     </style>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>dean.one</title>
     <link rel="stylesheet" href="style.css" />
