--- a/11-produkte/11.html
+++ b/11-produkte/11.html
@@ -14,7 +14,10 @@
     <script src="https://unpkg.com/p5.js-svg@1.3.1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
+
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    
+
     <title>11.dean.one</title>
   </head>
 
