--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       }
     </style>
     <meta charset="utf-8" />
- 
-    <title>dean.one</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+   
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
+    <title>dean.one</title>
   </head>
   
   <body>
