--- a/04-text/04.html
+++ b/04-text/04.html
@@ -14,9 +14,9 @@
     <script src="https://unpkg.com/p5.js-svg@1.3.1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
-    
+
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style.css" />
