--- a/06-quadrat/06.html
+++ b/06-quadrat/06.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="#" type="image/x-icon" />
     <style>
       .img-bottom-right {
-        position: absolute;
+        position: fixed;
         bottom: 20px;
         right: 20px;
       }
