--- a/04-text/04.html
+++ b/04-text/04.html
@@ -72,7 +72,7 @@
         <br />Jetzt stellt sich die Frage: können geometrische Formen einen Charakter, eine Duftnote, Vitamine, 
         eine Eleganz, eine Innovation, und vieles andere haben? Wenn ja, wie kann das aussehen, riechen, schmecken, 
         kleiden oder einfach glücklich machen?<br />
-        <h1 style="margin-bottom: 100pt"></h1>
+        <h1 style="margin-bottom: 80pt"></h1><br />
       </h1>
 
     <img
