--- a/01-text/01.html
+++ b/01-text/01.html
@@ -8,7 +8,7 @@
         bottom: 20px;
         right: 20px;
       }
-    </style>
+      </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
 <script src="https://unpkg.com/p5.js-svg@1.3.1"></script>
@@ -53,7 +53,7 @@
         Naturphänomenen beobachtet werden, z. B. in der Form von Blättern, der Struktur von Kristallen und der Anordnung 
         der Blütenblätter einer Blume. Die Formen stehen oft für Gleichgewicht, Harmonie und Stabilität.<br />
         <br /><span style="color:#0a0a0a"><u>Kreis, Quadrat, Dreieck und das Parallelogramm</u></span><br />
-        <p style="margin-bottom: 100pt"></p>
+        <h1 style="margin-bottom: 80pt"></h1><br />
       </h1>
 
     <img
